--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "type": "commonjs",
   "scripts": {
     "start": "node ./dist/main.js",
+    "dev": "nodemon",
+    "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -19,6 +21,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "prettier": "^2.5.1"
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
+    "ts-node": "^10.5.0"
   }
 }
