--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "node ./dist/main.js",
     "dev": "nodemon",
     "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "generate": "prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.10.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "class-transformer": "^0.5.1",
@@ -29,6 +31,7 @@
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "prisma": "^3.10.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
