--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "inversify": "^6.0.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tslog": "^3.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "prisma": "^3.10.0",
