--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon",
     "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts",
     "build": "tsc",
-    "generate": "prisma generate"
+    "generate": "prisma generate",
+    "test": "jest",
+    "test:e2e": "jest --config jest.e2e.config.ts --coverage"
   },
   "keywords": [],
   "author": "",
@@ -30,10 +32,15 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "prisma": "^3.10.0",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
